crates/plurimus_bui/tests/snapshots/bui_render__bui_flex_backgrounds.snap
---
source: crates/plurimus_ui/tests/bui_render.rs
expression: frame(&app)
---
        
        
        
        
--
aaaaaaaa
aaaaaaaa
bbbbbbbb
bbbbbbbb
a: fg:Some(Reset) bg:Some(Rgb(255, 0, 0)) mods:NONE
b: fg:Some(Reset) bg:Some(Rgb(0, 0, 255)) mods:NONE
