crates/plurimus_bui/tests/snapshots/bui_render__bui_overflow_clip.snap
---
source: crates/plurimus_ui/tests/bui_render.rs
expression: frame(&app)
---
clippe    
          
          
--
aaaaaabbbb
bbbbbbbbbb
bbbbbbbbbb
a: fg:Some(Reset) bg:Some(Rgb(255, 0, 255)) mods:NONE
b: fg:Some(Reset) bg:Some(Reset) mods:NONE
