crates/plurimus_bui/tests/snapshots/bui_render__bui_scroll_top.snap
---
source: crates/plurimus_ui/tests/bui_render.rs
expression: composed_styled_frame(&app)
---
r1    
r2    
--
aaaaaa
aaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
