crates/plurimus_bui/tests/snapshots/bui_render__bui_two_cameras.snap
---
source: crates/plurimus_ui/tests/bui_render.rs
expression: frame(&app)
---
left  right 
            
--
aaaaaaaaaaaa
aaaaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
